# flask-db

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yaml  file.json  jsonplaceholder_requests.py  main.py  pyproject.toml  start.sh  util.py
homework_04/: models.py
migrations/: alembic.ini
migrations/versions/: 2023_09_28_1207-7b4a33c1bb04_init_db.py  2023_09_28_1410-c7eca02d5efe_add_databases.py  2023_09_28_1755-6fb9fbbaa739_init.py  2023_09_30_2309-650445c0a220_init.py  2023_10_01_0043-b38a77f018c9_init.py  2023_10_01_2140-e940386c9718_init.py  a9e5a22d5824_add_first_migration.py
models/: __init__.py  post.py  product.py  user.py
templates/: base.html  index.html
templates/products/: confirm-delete.html  detail.html
templates/users/: add.html  base.html  confirm-delete.html  detail.html  index.html
views/: products.py  users.py
